# contrastive-decoding

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  response.md
examples/: docstring.txt  haiku.txt  outputs.md
notebooks/: analysis.ipynb
src/contrastive_decoding/: __init__.py  config.py  decoding.py  main.py  utils.py
tests/: test_decoding.py
