[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrastive-decoding"
version = "0.1.0"
description = "Contrastive decoding playground with Qwen expert/amateur models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.2",
    "transformers>=4.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
